--- a/details.html
+++ b/details.html
@@ -17,7 +17,7 @@
     <div id="progress-bar"></div>
   </div>
   <div id="title">
-    <div id="title-text">... لا مستحيلا</div>
+    <div id="title-text">💪أنت تقدر </div>
   </div>
   <div id="controls">
     <div class="control"><i class="material-icons icon">&#xE045;</i></div>
@@ -27,6 +27,10 @@
     </div>
     <div class="control"><i class="material-icons icon">&#xE044;</i></div>
   </div>
+  <p id="term"> 
+     كن على علم ،  بأن لديك القوة والشجاعة والدافع للقيام بكل ما تريد 
+      فقط استمر في النظر إلى نفسك وإلى حلمك  
+  </p>
 </main>
     
 </body>
